ændringer i forhold til php

--- a/header.html
+++ b/header.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
-<html lang="">
-<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="header.css" type="text/css">
     <!--Burgermenu ikon hentes ind med det nedstående link rel-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Det nedstående link rel bruges for at hente SoMe, til top pil, kurv ikonerne ind fra w3schools-->
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
+    <!--    link til ikonet (pilen der fører til top) https://www.w3schools.com/icons/tryit.asp?icon=fas_fa-arrow-up&unicon=f062
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>-->
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <title></title>
+
 </head>
 
 <body>
@@ -30,7 +31,7 @@
     </div>
 
     <!--Burgermenu som er blevet hentet ind som et ikon - https://www.w3schools.com/icons/tryit.asp?filename=tryicons_fa-navicon-->
-    <span onclick="openNav()"><i class="fa fa-navicon" style="font-size:35px;font-weight:10;margin-left: 1vw; margin-top: 1vw; color:#F18FAB; "></i></span>
+    <span onclick="openNav()"><i class="fa fa-navicon" style="font-size:35px;margin-left: 1vw; margin-top: 1vw; color:black; "></i></span>
 
 
     <!--Topnavigation/menu til ipad samt desktop-->
@@ -72,5 +73,4 @@
         }
     </script>
 
-</body>
-</html>
+
