--- a/kontakt.html
+++ b/kontakt.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="da">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="kontakt.css" type="text/css">
-    <meta name="description" content="Kontakt MaryLou Jewellery og find hendes butik på Gammel Kongevej 101">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <!--    link til ikonet (pilen der fører til top) https://www.w3schools.com/icons/tryit.asp?icon=fas_fa-arrow-up&unicon=f062-->
-    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
     <title>Kontakt Marylou Jewellery</title>
-</head>
+    <meta name="description" content="Kontakt MaryLou Jewellery og find hendes butik på Gammel Kongevej 101">
+    <link rel="stylesheet" href="kontakt.css" type="text/css">
+    <link rel="stylesheet" href="footer.css" type="text/css">
 
-<body>
-    <!--    <?php include "header.html";?>-->
+
+
+    <?php include "header.html";?>
     <main>
 
         <section id="main_grid">
@@ -36,7 +31,7 @@
         <div onclick="topFunction()"> <i style='font-size:24px' class='fas'>&#xf062;</i></div>
     </main>
 
-    <!--<?php include "footer.html;?>-->
+    <?php include "footer.html";?>
 
     <script>
         //Hent Json filen når DOM er loaded
