--- a/om.html
+++ b/om.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Om side som omhandler Marylou Jewerllery og hvor hendes inspiration til at lave smykker kommer fra">
-    <link rel="stylesheet" href="om.css" type="text/css">
-    <!--    link til ikonet (pilen der fører til top) https://www.w3schools.com/icons/tryit.asp?icon=fas_fa-arrow-up&unicon=f062-->
-    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <title>Om Marylou Jewellery</title>
-</head>
+    <link rel="stylesheet" href="om.css" type="text/css">
+     <link rel="stylesheet" href="footer.css" type="text/css">
+    <meta name="description" content="Om side som omhandler Marylou Jewerllery og hvor hendes inspiration til at lave smykker kommer fra">
 
-<body>
-    <!--    <?php include "header.html";?>-->
+
+
+
+    <?php include "header.html";?>
     <main>
         <!--Templates til indholdet på om siden, som skal bruges i javascript for at hente det dynamiske indhold ved hjælp af en json fil fra wordpress-->
         <section id="container" class="data-container"></section>
@@ -37,7 +33,7 @@
 
     </main>
 
-    <!--<?php include "footer.html;?>-->
+    <?php include "footer.html";?>
 
     <script>
         //Hent Json filen når DOM er loaded
