--- a/vaerkstedet.html
+++ b/vaerkstedet.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="da">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="vaerkstedet.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <!--    link til ikonet (pilen der fører til top) https://www.w3schools.com/icons/tryit.asp?icon=fas_fa-arrow-up&unicon=f062-->
-    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
-    <meta name="description" content="Velkommen til MaryLou Jewellerys butik som byder på kreativitet og unikke smykker">
     <title>Butikken</title>
-</head>
+    <link rel="stylesheet" href="vaerkstedet.css" type="text/css">
+     <link rel="stylesheet" href="footer.css" type="text/css">
+    <meta name="description" content="Velkommen til MaryLou Jewellerys butik som byder på kreativitet og unikke smykker">
 
-<body>
-    <!--    <?php include "header.html";?>-->
+
+
+
+    <?php include "header.html";?>
     <main>
         <!--Templates til indholdet på butik siden, som skal bruges i javascript for at hente det dynamiske indhold ved hjælp af en json fil fra wordpress-->
         <section id="container" class="data-container"></section>
@@ -36,7 +32,7 @@
         <div onclick="topFunction()"> <i style='font-size:24px' class='fas'>&#xf062;</i></div>
     </main>
 
-    <!--<?php include "footer.html;?>-->
+    <?php include "footer.html";?>
 
     <script>
         //Hent Json filen når DOM er loaded
