--- a/handel.html
+++ b/handel.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Handelsbetingelser</title>
     <meta name="description" content="Handelsbetingelser ved køb af smykker hos MaryLou Jewellery">
     <link rel="stylesheet" href="betingelser.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <!--    link til ikonet (pilen der fører til top) https://www.w3schools.com/icons/tryit.asp?icon=fas_fa-arrow-up&unicon=f062-->
-    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
-    <title>Handelsbetingelser</title>
-</head>
+     <link rel="stylesheet" href="footer.css" type="text/css">
 
-<body>
+
+
+    <?php include "header.html"; ?>
     <main>
         <!--Template til indholdet på handelsbetingelser siden, som skal bruges i javascript for at hente det dynamiske indhold ved hjælp af en json fil fra wordpress-->
         <section id="container" class="data-container"></section>
