--- a/index.html
+++ b/index.html
@@ -2,19 +2,13 @@
 <html lang="">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Marylou Jewellery</title>
     <meta name="description" content="Velkommen til MaryLou Jewellery som er en dansk smykkedesigner med butik på Frederiksberg">
     <link rel="stylesheet" href="index.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <!--    link til ikonet (pilen der fører til top) https://www.w3schools.com/icons/tryit.asp?icon=fas_fa-arrow-up&unicon=f062-->
-    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
-    <title>Marylou Jewellery</title>
-</head>
+     <link rel="stylesheet" href="footer.css" type="text/css">
 
 
-<body>
+
     <?php include "header.html"; ?>
 
     <main>
