ændring af navn på side

--- a/header.html
+++ b/header.html
@@ -24,7 +24,7 @@
         <!--Menupunkter til sidenavigationen-->
         <div class="punkter">
             <a href="smykker.html">SMYKKER</a>
-            <a href="vaerkstedet.html">BUTIKKEN</a>
+            <a href="butikken.html">BUTIKKEN</a>
             <a href="om.html">OM MARYLOU</a>
             <a href="kontakt.html">KONTAKT</a>
         </div>
@@ -42,7 +42,7 @@
         <!-- Menupunkter til topnavigation/menu-->
         <div class="punkter">
             <a href="smykker.html">SMYKKER</a>
-            <a href="vaerkstedet.html">BUTIKKEN</a>
+            <a href="butikken.html">BUTIKKEN</a>
             <a href="om.html">OM MARYLOU</a>
             <a href="kontakt.html">KONTAKT</a>
         </div>
