ændring af navn

--- a/butikken.html
+++ b/butikken.html
@@ -2,7 +2,7 @@
 <html lang="da">
 <head>
     <title>Butikken</title>
-    <link rel="stylesheet" href="vaerkstedet.css" type="text/css">
+    <link rel="stylesheet" href="butikken.css" type="text/css">
      <link rel="stylesheet" href="footer.css" type="text/css">
     <meta name="description" content="Velkommen til MaryLou Jewellerys butik som byder på kreativitet og unikke smykker">
 
