filer er ændret til php for at hente header og footer ind

--- a/footer.html
+++ b/footer.html
@@ -2,9 +2,9 @@
         <!--Sektion til info med de forskellige betingelser som linker videre til hver deres side med mere info-->
         <section id="info">
             <h1>INFO</h1>
-            <div><a href="handel.html">Handelsbetingelser</a></div>
-            <div><a href="levering.html">Levering</a></div>
-            <div><a href="retur.html">Returnering</a></div>
+            <div><a href="handel.php">Handelsbetingelser</a></div>
+            <div><a href="levering.php">Levering</a></div>
+            <div><a href="retur.php">Returnering</a></div>
         </section>
         <!--Sektion til MaryLou Jewellerys kontakt informationer-->
         <section id="Mary">
