--- a/header.html
+++ b/header.html
@@ -5,8 +5,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Det nedstående link rel bruges for at hente SoMe, til top pil, kurv ikonerne ind fra w3schools-->
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
-    <!--    link til ikonet (pilen der fører til top) https://www.w3schools.com/icons/tryit.asp?icon=fas_fa-arrow-up&unicon=f062
-    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>-->
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
@@ -23,10 +21,10 @@
         <a href="javascript:void(0)" class="closebtn" style="font-size: 30px; float: right; width: 20px; border: none; margin-right: 2vw;" onclick="closeMenu()">&times;</a>
         <!--Menupunkter til sidenavigationen-->
         <div class="punkter">
-            <a href="smykker.html">SMYKKER</a>
-            <a href="butikken.html">BUTIKKEN</a>
-            <a href="om.html">OM MARYLOU</a>
-            <a href="kontakt.html">KONTAKT</a>
+            <a href="smykker.php">SMYKKER</a>
+            <a href="butikken.php">BUTIKKEN</a>
+            <a href="om.php">OM MARYLOU</a>
+            <a href="kontakt.php">KONTAKT</a>
         </div>
     </div>
 
@@ -41,10 +39,10 @@
         </section>
         <!-- Menupunkter til topnavigation/menu-->
         <div class="punkter">
-            <a href="smykker.html">SMYKKER</a>
-            <a href="butikken.html">BUTIKKEN</a>
-            <a href="om.html">OM MARYLOU</a>
-            <a href="kontakt.html">KONTAKT</a>
+            <a href="smykker.php">SMYKKER</a>
+            <a href="butikken.php">BUTIKKEN</a>
+            <a href="om.php">OM MARYLOU</a>
+            <a href="kontakt.php">KONTAKT</a>
         </div>
     </div>
 
@@ -54,11 +52,11 @@
         document.querySelector("#logo1").addEventListener("click", forside1);
 
         function forside() {
-            window.location.href = "index.html";
+            window.location.href = "index.php";
         }
 
         function forside1() {
-            window.location.href = "index.html";
+            window.location.href = "index.php";
         }
 
         /*Javascript til sidenavigation - https://www.w3schools.com/howto/howto_js_sidenav.asp
